<resources>
    <string name="app_name">ChatApp</string>
    <string name="chat_app">Chat App</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="chat">Chat</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="select_country">Select Country</string>
    <string name="field_can_not_be_empty">Field can not be empty!</string>
    <string name="enter_valid_email">Emter a valid email</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have account? Login</string>
    <string name="dont_have_account">Don\'t have account? Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search country here</string>
    <string name="save">Save</string>
    <string name="pakistan">Pakistan</string>
    <string name="all_users">All Users</string>
    <string name="friends">Friends</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="type_message_here">Type message here ...</string>
    <string name="from_profile">FromProfile</string>
    <string name="no_friend">Your friend list is empty.</string>
</resources>