<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.LoginActivity">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_app"
        android:textColor="@color/blue_1558b5"
        android:textSize="20sp"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginVertical="20dp"
        app:layout_constraintBottom_toTopOf="@id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableTopCompat="@drawable/ic_chat_logo" />



            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@id/et_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:layout_marginVertical="10dp"
                app:layout_constraintBottom_toTopOf="@id/btn_login"
                app:layout_constraintEnd_toEndOf="@id/et_email"
                app:layout_constraintStart_toStartOf="@id/et_email"
                app:layout_constraintTop_toBottomOf="@id/et_email" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/et_password"
                app:layout_constraintStart_toStartOf="@id/et_password"
                app:layout_constraintTop_toBottomOf="@id/et_password" />



</androidx.constraintlayout.widget.ConstraintLayout>