<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SetUpProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/ic_profile_pic_pace_holder"
        app:layout_constraintBottom_toTopOf="@id/til_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/tv_select_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/civ_profile_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_select_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/gray_light"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        android:text="@string/select_country"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/btn_update_info"
        app:layout_constraintEnd_toEndOf="@+id/til_name"
        app:layout_constraintStart_toStartOf="@+id/til_name"
        app:layout_constraintTop_toBottomOf="@+id/til_name" />


    <Button
        android:id="@+id/btn_update_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_select_country"
        app:layout_constraintStart_toStartOf="@+id/tv_select_country"
        app:layout_constraintTop_toBottomOf="@+id/tv_select_country" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>